플랫폼 리펙토링

--- a/jwebppy/src/main/resources/mybatis/mapper/mariadb/platform/mgmt/i18n/LangMapper.xml
+++ b/jwebppy/src/main/resources/mybatis/mapper/mariadb/platform/mgmt/i18n/LangMapper.xml
@@ -99,7 +99,7 @@
 			and a.basename=#{basename}
 		</if>
 		
-		<if test="type != null and type != ''">
+		<if test="type != null and type.toString() != ''">
 			and a.type=#{type}
 		</if>
 		
@@ -128,7 +128,7 @@
 			and a.basename=#{basename}
 		</if>			
 	
-		<if test="type != null and type != ''">
+		<if test="type != null and type.toString() != ''">
 			and a.type=#{type}
 		</if>
 		
